# rss2email

./: .gitignore  .mailmap  .travis.yml  .update-copyright.conf  AUTHORS  CHANGELOG  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  HACKING.md  MANIFEST.in  README  README.rst  config.py  config.py.example  html2text.py  pyproject.toml  r2e  r2e.1  r2e.bat  readme.html  requirements.txt  rss2email.py  runtests.sh  setup.py  shell.nix  test_rss2email.py
.github/workflows/: docker-build.yml  docker-publish.yml  python-package.yml
completion/: r2e.zsh
nix/: nixpkgs.nix  release.nix
rss2email/: __init__.py  command.py  config.py  email.py  error.py  feed.py  feeds.py  hook.py  imapmgt.py  main.py  oauth2.py  util.py  version.py
rss2email/post_process/: __init__.py  downcase.py  prettify.py  redirect.py
test/: README  test.py  test_reply_changes.py
test/allthingsrss/: 1.expected  2.config  2.expected  3.expected  4.config  4.expected  feed.atom
test/bbc-chinese/: 1.expected  2.expected  README  feed.atom
test/data/allthingsrss/: 1.expected  2.config  2.expected  3.config  3.expected  4.config  4.expected  5.config  5.expected  6.config  6.expected  7.config  7.expected  README  feed.atom
test/data/bbc-chinese/: 2.config  2.expected  3.config  3.expected  feed.atom
test/data/disqus/: 1.expected  README
test/data/fastmailstatus/: 1.expected  README  feed.rss
test/data/gmane/: 1.expected  (+7 more)
test/disqus/: 1.expected  feed.rss
test/gmane/: 1.expected  2.config  2.expected  3.expected  README  feed.rss
test/util/: execcontext.py  tempmaildir.py  tempsendmail.py
(+16 files in other folders)
